--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
-    "mongoose": "^5.2.5"
+    "mongoose": "^5.2.5",
+    "nodemailer": "^4.6.8"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
